[gd_scene load_steps=4 format=3 uid="uid://b5gwsrsi65lh"]

[ext_resource type="Script" uid="uid://d0usjsyw5mgs4" path="res://object.gd" id="1_l2ofb"]
[ext_resource type="Texture2D" uid="uid://cd841abchhret" path="res://icon.svg" id="2_3xuqs"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3xuqs"]
size = Vector2(128, 128)

[node name="object" type="Node2D"]
script = ExtResource("1_l2ofb")
metadata/_edit_group_ = true

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_3xuqs")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("RectangleShape2D_3xuqs")

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_shape_exited" from="Area2D" to="." method="_on_area_2d_body_shape_exited"]
[connection signal="mouse_entered" from="Area2D" to="." method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_area_2d_mouse_exited"]
